--- a/bio.Rmd
+++ b/bio.Rmd
@@ -1,5 +1,16 @@
 ---
-title: "Bio"
+title: "Tom Hardwicke"
+position: "Research Fellow"
+university: "University of Melbourne"
+image: "files/me.jpeg"
+site: distill::distill_website
+output:
+  postcards::solana_mod
 ---
+<br>
+
+## Bio
+
+<br>
 
 Dr Tom Hardwicke is a Research Fellow at the Melbourne School of Psychological Sciences at The University of Melbourne. He received his PhD in Experimental Psychology from University College London in 2016 and subsequently completed post-doctoral fellowships at The Meta-Research Innovation Center at Stanford University (METRICS), The QUEST Center for Responsible Research at Charité Berlin, and the Department of Psychology at The University of Amsterdam. Tom works on a variety of meta-research (‘research-on-research’) projects related to transparency, bias, peer review, and reproducibility.
