--- a/bio.Rmd
+++ b/bio.Rmd
@@ -13,4 +13,4 @@ output:
 
 <br>
 
-Dr Tom Hardwicke is a Research Fellow at the Melbourne School of Psychological Sciences at The University of Melbourne. He received his PhD in Experimental Psychology from University College London in 2016 and subsequently completed post-doctoral fellowships at The Meta-Research Innovation Center at Stanford University (METRICS), The QUEST Center for Responsible Research at Charité Berlin, and the Department of Psychology at The University of Amsterdam. Tom works on a variety of meta-research (‘research-on-research’) projects related to transparency, bias, peer review, and reproducibility.
+Dr Tom Hardwicke is a Research Fellow at the School of Psychological Sciences, University of Melbourne. He received his PhD in Experimental Psychology from University College London in 2016 and subsequently completed post-doctoral fellowships at the Meta-Research Innovation Center at Stanford University (METRICS), The QUEST Center for Responsible Research at Charité — Universitätsmedizin Berlin, and the Department of Psychology at the University of Amsterdam. Tom works on a variety of meta-research (‘research-on-research’) projects related to transparency, bias, peer review, and reproducibility.
