--- a/bio.Rmd
+++ b/bio.Rmd
@@ -13,5 +13,5 @@ output:
 
 <br>
 
-Dr Tom Hardwicke is a Senior Lecturer at the School of Psychology, University of Sydney. He received his PhD in Experimental Psychology from University College London in 2016 and subsequently completed post-doctoral fellowships at Stanford University, Charité — Universitätsmedizin Berlin, the University of Amsterdam, and the University of Melbourne. Tom works at the intersection of psychology and meta-research (‘research-on-research’) on projects related to transparency, bias, peer review, scientific criticism, and reproducibility. Since January 2024, Tom is Senior Editor for Statistics, Transparency, and Rigour at the journal Psychological Science.
+Dr Tom Hardwicke works at the intersection of psychology and meta-research (‘research-on-research’) on projects related to transparency, bias, peer review, scientific criticism, and reproducibility. Tom is a Senior Lecturer at the School of Psychology, University of Sydney. Prior to joining the University of Sydney in 2025, he was a Senior Research Fellow at the University of Melbourne and completed postdoctoral fellowships at the University of Amsterdam, Charité — Universitätsmedizin Berlin, and Stanford University. He received his PhD in Experimental Psychology from University College London in 2016. He is currently Senior Editor for Statistics, Transparency, and Rigour, at the journal Psychological Science.
 
