--- a/bio.Rmd
+++ b/bio.Rmd
@@ -13,5 +13,5 @@ output:
 
 <br>
 
-Dr Tom Hardwicke is a Senior Lecturer at the School of Psychology, University of Sydney, and Senior Editor for Statistics, Transparency, and Rigour, at the journal *Psychological Science*. He works at the intersection of psychology and meta-research (‘research-on-research’) on projects related to transparency, bias, peer review, scientific criticism, and reproducibility. Prior to joining the University of Sydney in 2025, he was a Senior Research Fellow at the University of Melbourne and completed postdoctoral fellowships at the University of Amsterdam, Charité — Universitätsmedizin Berlin, and Stanford University. He received his PhD in Experimental Psychology from University College London in 2016.
+Dr Tom Hardwicke is a Senior Lecturer at the School of Psychology, University of Sydney, and Senior Editor for Statistics, Transparency, and Rigour, at the journal *Psychological Science*. He works at the intersection of psychology and meta-research (‘research-on-research’) on projects related to transparency, bias, peer review, scientific criticism, and reproducibility. Prior to joining the University of Sydney in 2025, he was a Senior Research Fellow at the University of Melbourne and completed postdoctoral fellowships at Charité — Universitätsmedizin Berlin, the University of Amsterdam, and Stanford University. He received his PhD in Experimental Psychology from University College London in 2016.
 
